# cpp_neural_network

./: CMakeLists.txt
qa/tests_neuron/: main.cpp  test_layer.cpp  test_neuron.cpp
src/nn/neuron/: Layer.h  Neuron.h
